# OnPyRunner

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.js  app.py  docker-compose.dev.yml  docker-compose.yml  dockerfile.server  dockerfile.worker  entrypoint.sh  package-lock.json  package.json  pytest.ini  queue.js  readme.md  requirements.txt  runCode.js  runCode.test.js  test_api.py  worker.js  worker.py
.claude/commands/: archi.md  explain.md  review.md
.github/workflows/: deploy.yml
OnPyRunner/api/: app.py
OnPyRunner/logging/: init.py
OnPyRunner/models/: payload.py  request.py  response.py
OnPyRunner/nsjail/: __init__.py  nsjail.py  result.py
OnPyRunner/utils/: analyzer.py
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/src/onpyrunner_api/: app.py
db/: pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 95495c18531e_create_executions_table.py
db/src/onpyrunner_db/: database.py  models.py  service.py
docs/: api.md  architecture.md  setup.md  test.md
docs/v1/: setup.md  test.md
models/: common.py  payload.py  request.py  response.py
nsjail/: nsjail.cfg  nsjail.py  result.py
requirements/: api-server.txt  base.txt  worker.txt
shared/: pyproject.toml
test/api/: request_validation_test.py
test/e2e/: execution_test.py
tests/api/: test_request_validation.py
tests/e2e/: test_execution.py
worker/: Dockerfile  pyproject.toml
worker/src/onpyrunner_worker/: analyzer.py  main.py
worker/src/onpyrunner_worker/nsjail/: __init__.py  nsjail.cfg  nsjail.py  pypy.cfg  python.cfg  result.py
(+5 files in other folders)
