[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onpyrunner-db"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "onpyrunner-shared",
    "pydantic-settings>=2.4.0",
    "asyncpg>=0.30.0",            # 비동기 PostgreSQL 드라이버
    "psycopg2-binary>=2.9.0",     # Alembic 마이그레이션용 동기 드라이버
    "alembic>=1.13.0",            # DB 마이그레이션
]

[tool.hatch.build.targets.wheel]
packages = ["src/onpyrunner_db"]
