[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onpyrunner-worker"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "onpyrunner-shared",
    "redis>=7.1.0",
    "hiredis>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onpyrunner_worker"]
